Add multi lenguage and DB migrations

--- a/Sales/Sales/App.xaml
+++ b/Sales/Sales/App.xaml
@@ -11,7 +11,9 @@
 
             <!-- Parameters -->
             <x:String x:Key="UrlAPI">https://salesapiservices.azurewebsites.net</x:String>
-            
+            <x:String x:Key="UrlPrefix">/api</x:String>
+            <x:String x:Key="UrlProductsController">/Products</x:String>
+        
         </ResourceDictionary>
     </Application.Resources>
 </Application>
