--- a/Sales/Sales/Views/AddProductPage.xaml
+++ b/Sales/Sales/Views/AddProductPage.xaml
@@ -10,31 +10,72 @@
             BindingContext="{Binding AddProduct}">
             <StackLayout
                 Padding="5">
+                <Image
+                    Source="noproduct">
+                </Image>
                 <Label
-                    Text="{i18n:Translate Description}">
+                    FontSize="Small"
+                    HorizontalOptions="Center"
+                    Text="{i18n:Translate ChangeImage}">
                 </Label>
-                <Entry
-                    Placeholder="{i18n:Translate DescriptionPlaceholder}">
-                </Entry>
-                <Label
-                    Text="{i18n:Translate Price}">
-                </Label>
-                <Entry
-                    Keyboard="Numeric"
-                    Placeholder="{i18n:Translate PricePlaceholder}">
-                </Entry>
-                <Label
-                    Text="{i18n:Translate Remarks}">
-                </Label>
-                <Editor
-                    VerticalOptions="FillAndExpand">
-                </Editor>
-                <ActivityIndicator>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="2*"/>
+                    </Grid.RowDefinitions>
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        Text="{i18n:Translate Description}"
+                        VerticalOptions="Center">
+                    </Label>
+                    <Entry
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        Text="{Binding Description}"
+                        Placeholder="{i18n:Translate DescriptionPlaceholder}">
+                    </Entry>
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        Text="{i18n:Translate Price}"
+                        VerticalOptions="Center">
+                    </Label>
+                    <Entry
+                        Grid.Column="1"
+                        Grid.Row="1"
+                        Keyboard="Numeric"
+                        Text="{Binding Price}"
+                        Placeholder="{i18n:Translate PricePlaceholder}">
+                    </Entry>
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="2"
+                        Text="{i18n:Translate Remarks}"
+                        VerticalOptions="Center">
+                    </Label>
+                    <Editor
+                        Grid.Column="1"
+                        Grid.Row="2"
+                        Text="{Binding Remarks}"
+                        VerticalOptions="FillAndExpand">
+                    </Editor>
+                </Grid>
+                <ActivityIndicator
+                    IsRunning="{Binding IsRunning}"
+                    VerticalOptions="CenterAndExpand">
                 </ActivityIndicator>
                 <Button
                     BackgroundColor="Navy"
                     BorderRadius="23"
+                    Command="{Binding SaveCommand}"
                     HeightRequest="46"
+                    IsEnabled="{Binding IsEnabled}"
                     Text="{i18n:Translate Save}"
                     TextColor="White">
                 </Button>
