Begin register user

--- a/Sales/Sales/App.xaml
+++ b/Sales/Sales/App.xaml
@@ -13,7 +13,8 @@
             <x:String x:Key="UrlAPI">https://salesapiservices.azurewebsites.net</x:String>
             <x:String x:Key="UrlPrefix">/api</x:String>
             <x:String x:Key="UrlProductsController">/Products</x:String>
-        
+            <x:String x:Key="UrlUsersController">/Users</x:String>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
