--- a/Sales/Sales/Views/RegisterPage.xaml
+++ b/Sales/Sales/Views/RegisterPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:i18n="clr-namespace:Sales.Helpers"
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              x:Class="Sales.Views.RegisterPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="{i18n:Translate Register}">
@@ -10,12 +11,15 @@
             BindingContext="{Binding Register}">
             <StackLayout
                 Padding="5">
-                <Image
-                    Source="{Binding ImageSource}">
+                <controls:CircleImage  
+                    Source="{Binding ImageSource}"
+                    Aspect="AspectFill"
+                    WidthRequest="200"
+                    HeightRequest="200">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding ChangeImageCommand}"/>
                     </Image.GestureRecognizers>
-                </Image>
+                </controls:CircleImage>
                 <Label
                     FontSize="Small"
                     HorizontalOptions="Center"
