Login with facebook

--- a/Sales/Sales/App.xaml
+++ b/Sales/Sales/App.xaml
@@ -15,6 +15,28 @@
             <x:String x:Key="UrlProductsController">/Products</x:String>
             <x:String x:Key="UrlUsersController">/Users</x:String>
 
+            <!-- Facebook -->
+            <x:String x:Key="FacebookAppID">263102957879241</x:String>
+            <x:String x:Key="FacebookAuthURL">https://www.facebook.com/dialog/oauth/</x:String>
+            <x:String x:Key="FacebookRedirectURL">https://www.facebook.com/connect/login_success.html</x:String>
+            <x:String x:Key="FacebookScope">email</x:String>
+
+            <!-- Instagram -->
+            <x:String x:Key="InstagramAppID">95e62f4c54f544018e5c982beaeffb62</x:String>
+            <x:String x:Key="InstagramAuthURL">https://api.instagram.com/oauth/authorize/</x:String>
+            <x:String x:Key="InstagramRedirectURL">https://www.instagram.com/</x:String>
+            <x:String x:Key="InstagramScope">basic</x:String>
+            <x:String x:Key="InstagramProfileInfoURL">https://api.instagram.com/v1/users/self/?access_token</x:String>
+
+            <!-- Twitter -->
+            <x:String x:Key="TwitterConsumerKey">YQTr4UuxgOs9IFkry9LorHN8k</x:String>
+            <x:String x:Key="TwitterConsumerSecret">Zz0V2rikyOB0ZcHWegpwU7PbndiOpPmNS2NeyUryrmlEsL2eEt</x:String>
+            <x:String x:Key="TwitterRequestTokenURL">https://api.twitter.com/oauth/request_token</x:String>
+            <x:String x:Key="TwitterAuthorizeURL">https://api.twitter.com/oauth/authorize</x:String>
+            <x:String x:Key="TwitterAccessTokenURL">https://api.twitter.com/oauth/access_token</x:String>
+            <x:String x:Key="Url">http://www.zulu-software.com</x:String>
+            <x:String x:Key="TwitterProfileInfoURL">https://api.twitter.com/1.1/account/verify_credentials.json</x:String>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
