--- a/Sales.Backend/Views/Shared/_Layout.cshtml
+++ b/Sales.Backend/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                    <li>@Html.ActionLink("Students", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Assistants", "Index", "Assistants")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
