--- a/Sales/Sales/Views/MasterPage.xaml
+++ b/Sales/Sales/Views/MasterPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                   xmlns:pages="clr-namespace:Sales.Views"
@@ -9,7 +9,7 @@
     <MasterDetailPage.Detail>
         <NavigationPage x:Name="Navigator">
             <x:Arguments>
-                <pages:ProductsPage/>
+                <pages:CategoriesPage/>
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
